<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.github.nlnwa</groupId>
    <artifactId>veidemann-controller</artifactId>
    <version>0</version>
    <packaging>jar</packaging>

    <organization>
        <name>National Library of Norway</name>
        <url>http://nb.no</url>
    </organization>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <docker.tag>latest</docker.tag>

        <docker.java.image>openjdk:8-jdk-alpine</docker.java.image>

        <veidemann.commons.version>0.3.10</veidemann.commons.version>
        <veidemann.rethinkdbadapter.version>0.3.15</veidemann.rethinkdbadapter.version>

        <log4j.version>2.7</log4j.version>
    </properties>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>oss.sonatype.org</id>
            <name>OSS Sonatype</name>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.github.nlnwa</groupId>
            <artifactId>veidemann-api</artifactId>
            <version>1.0.0-beta7</version>
        </dependency>
        <dependency>
            <groupId>com.github.nlnwa</groupId>
            <artifactId>veidemann-rethinkdbadapter</artifactId>
            <version>${veidemann.rethinkdbadapter.version}</version>
        </dependency>
        <dependency>
            <groupId>com.github.nlnwa</groupId>
            <artifactId>veidemann-commons</artifactId>
            <version>${veidemann.commons.version}</version>
        </dependency>
        <dependency>
            <groupId>it.sauronsoftware.cron4j</groupId>
            <artifactId>cron4j</artifactId>
            <version>2.2.5</version>
        </dependency>
        <dependency>
            <groupId>org.netpreserve.commons</groupId>
            <artifactId>webarchive-commons-uri</artifactId>
            <version>2.0.0-SNAPSHOT</version>
        </dependency>

        <!-- Configuration framework -->
        <dependency>
            <groupId>com.typesafe</groupId>
            <artifactId>config</artifactId>
            <version>1.3.1</version>
        </dependency>

        <!-- Do all logging thru Log4j -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.21</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-jul</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.8.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>2.13.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Make version number available for application -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>docker-build</id>
            <build>
                <plugins>
                    <!-- Create assembly with startup scripts and dependencies -->
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>appassembler-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>assemble</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <licenseHeaderFile>${basedir}/src/main/etc/license-header.txt</licenseHeaderFile>
                            <programs>
                                <program>
                                    <mainClass>no.nb.nna.veidemann.controller.Main</mainClass>
                                    <id>${project.artifactId}</id>
                                </program>
                            </programs>
                            <binFolder>bin</binFolder>
                            <repositoryName>lib</repositoryName>
                            <repositoryLayout>flat</repositoryLayout>
                            <useWildcardClassPath>true</useWildcardClassPath>
                            <configurationDirectory>config</configurationDirectory>
                            <endorsedDir>plugins</endorsedDir>
                            <preAssembleDirectory>src/main/distfiles</preAssembleDirectory>
                            <extraJvmArguments>-Dconfig.file=@BASEDIR@/config/application.conf
                                -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap
                            </extraJvmArguments>
                        </configuration>
                    </plugin>

                    <!-- Build Docker image -->
                    <plugin>
                        <groupId>io.fabric8</groupId>
                        <artifactId>docker-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <id>docker-build</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <images>
                                <image>
                                    <name>norsknettarkiv/${project.artifactId}</name>
                                    <alias>controller</alias>
                                    <build>
                                        <from>${docker.java.image}</from>
                                        <maintainer>National Library of Norway</maintainer>
                                        <tags>
                                            <tag>${docker.tag}</tag>
                                        </tags>
                                        <runCmds>apk add --no-cache openssl libuuid</runCmds>

                                        <ports>
                                            <port>50051</port>
                                        </ports>
                                        <cmd>
                                            <exec>
                                                <arg>/veidemann/bin/start.sh</arg>
                                            </exec>
                                        </cmd>
                                        <assembly>
                                            <targetDir>/veidemann</targetDir>

                                            <inline>
                                                <includeBaseDirectory>true</includeBaseDirectory>
                                                <fileSets>
                                                    <fileSet>
                                                        <directory>target/appassembler/bin</directory>
                                                        <outputDirectory>bin</outputDirectory>
                                                        <includes>
                                                            <include>${project.artifactId}</include>
                                                            <include>start.sh</include>
                                                        </includes>
                                                        <fileMode>0755</fileMode>
                                                    </fileSet>
                                                    <fileSet>
                                                        <directory>target/appassembler/bin</directory>
                                                        <outputDirectory>bin</outputDirectory>
                                                        <excludes>
                                                            <exclude>${project.artifactId}</exclude>
                                                            <exclude>start.sh</exclude>
                                                        </excludes>
                                                        <fileMode>0644</fileMode>
                                                    </fileSet>
                                                    <fileSet>
                                                        <directory>target/appassembler</directory>
                                                        <outputDirectory>/</outputDirectory>
                                                        <excludes>
                                                            <exclude>bin</exclude>
                                                        </excludes>
                                                    </fileSet>
                                                </fileSets>
                                                <files>
                                                    <file>
                                                        <source>LICENSE</source>
                                                        <outputDirectory>/</outputDirectory>
                                                        <fileMode>0644</fileMode>
                                                    </file>
                                                </files>
                                            </inline>
                                        </assembly>
                                    </build>
                                </image>
                            </images>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>